--- a/app/globals.css
+++ b/app/globals.css
@@ -17,13 +17,16 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  /* color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
+  color: white;
+  background: linear-gradient(to right, #2b5876, #4e4376);
+  height: 100vh;
 }
 
 .menu-bar {
@@ -44,4 +47,9 @@ body {
   margin-left: 20px;
   width: auto;
   color: white;
+}
+
+.menu-bar a p {
+  color: white;
+  font-size: 14px;
 }
