--- a/app/movie/[id]/page.css
+++ b/app/movie/[id]/page.css
@@ -146,7 +146,7 @@
 .info-box {
   position: relative;
   top: 10px;
-  overflow-y: scroll;
+  overflow-y: auto;
   margin-left: 5%;
   margin-right: 5%;
 }
@@ -156,4 +156,17 @@
   top: 100%;
   left: 100%;
   transform: translate(50%,50%);
+}
+
+.back-button {
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
+  color: #333333;
+  padding: 8px 12px;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.back-button:hover {
+  background-color: #f2f2f2;
 }
