--- a/app/globals.css
+++ b/app/globals.css
@@ -39,6 +39,7 @@ body {
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.4);
   display: flex;
   flex-direction: row;
+  z-index: 9999;
 }
 
 .menu-bar a {
