--- a/app/user/page.css
+++ b/app/user/page.css
@@ -1,16 +1,53 @@
 .main-body {
   position: fixed;
-  top: 0;
-  left: 0;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  border-radius: 20px;
-  width:calc(100% - 40px);
-  height: calc(100% - 90px);
-  margin: 20px;
-  margin-top: 70px;
+  top: 90px;
+  left: 50%;
+  transform: translate(-50%);
+  background-color: #1b263b;
+  border-radius: 100px;
+  width:50%;
+  min-width: 500px;
+  max-width: 650px;
+  height: 80%;
+  min-height: 600px;
   /* Add additional styles for the main body */
-  overflow: hidden;
   box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.4);
+}
+
+.top-card {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  right: 40px;
+  height: auto;
+  padding: 20px;
+  border-radius: 80px;
+  background: linear-gradient(to right, #2b5876, #4e4376);
+  display: flex;
+  flex-direction: row;
+}
+
+.user-info {
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px
+}
+
+.ratings-main {
+  position: absolute;
+  top: 260px;
+  left: 40px;
+  right: 40px;
+  bottom: 40px;
+  border-radius: 80px;
+  width: calc(100% - 80px);
+  height: auto;
+  background: linear-gradient(to right, #2b5876, #4e4376);
+  display: flex;
+  flex-direction: row;
+  overflow: auto;
+}
+
+.ratings-main::-webkit-scrollbar {
+  display: none;
 }
