--- a/app/home/components/Movie/movie.css
+++ b/app/home/components/Movie/movie.css
@@ -6,7 +6,7 @@
   margin: 10px;
   overflow: hidden;
   border-radius: 20px;
-
+  background-color: #1b263b;
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.4);
   cursor: pointer;
 }
